--- a/caffeine_tracker/templates/base.html
+++ b/caffeine_tracker/templates/base.html
@@ -15,6 +15,9 @@
       <link href="{% static 'css/head.css' %}?_={{ request.extra.CACHE_BUSTER }}" rel="stylesheet"/>
     {% endif %}
     <style>{% block styles %}{% endblock %}</style>
+
+    <link rel="prefetch" href="{% static 'js/main.min.js' %}?_={{ request.extra.CACHE_BUSTER }}"/>
+
     <title>{% block title %}Caffeine Tracker{% endblock %}</title>
     <!--<meta name="" content=""/>-->
     <script>
@@ -23,19 +26,39 @@ window.CAFFEINE_TRACKER = {
     'cache_buster': '{{ request.extra.CACHE_BUSTER }}', // Passing the cache buster from the server to the client.
     'ctm': false, // Have we cut the mustard?
     'static_path': '{% static '' %}', // Passing the path to static content from the server to the client.
-    }
+  },
+  'loading': {
+    'loading': false
+  }
 };
 if ('querySelector' in document && 'addEventListener' in window  && ("classList" in document.createElement("_")) && Object.prototype.toString.call(window.operamini) !== "[object OperaMini]") {
   // Remember that we have cut the mustard to save checking again in the future.
   window.CAFFEINE_TRACKER.config.ctm = true;
   // CSS hook to allow styling for an initial state when JS is enabled: http://decadecity.net/blog/2013/07/30/coping-without-javascript#css
   document.querySelector('html').classList.add('js', 'js--loading');
+  window.CAFFEINE_TRACKER.loading.loading = true;
+  window.CAFFEINE_TRACKER.loading.timeout = setTimeout(function() {
+    window.CAFFEINE_TRACKER.loading.loading = false;
+    document.querySelector('html').classList.remove('js--loading', 'js');
+  }, 5000);
 }
     </script>
   </head>
   <body>
     {% block body %}{% endblock %}
-    <script src="{% static 'js/main.js' %}" async></script>
-    {% block extrajs %}{% endblock %}
+<script>
+(function () {
+  // Use JavaScript to asynchronously insert the core JS functionality.
+  var s, s0, main_js = "{% if request.extra.DEBUG %}{% static 'js/main.js' %}{% else %}{% static 'js/main.min.js' %}{% endif %}?_={{ request.extra.CACHE_BUSTER }}";
+  if (window.CAFFEINE_TRACKER.config.ctm) {
+    s = document.createElement('script');
+    s.type = 'text/javascript';
+    s.async = true;
+    s.src = main_js;
+    s0 = document.getElementsByTagName('script')[0];
+    s0.parentNode.insertBefore(s, s0);
+  }
+}());
+</script>
   </body>
 </html>
