--- a/caffeine_tracker/templates/registration/login.html
+++ b/caffeine_tracker/templates/registration/login.html
@@ -14,4 +14,7 @@
   <input type="hidden" name="next" value="{{ next }}" />
 </form>
 
+<footer>
+  <p>In case you are hard of understanding and didn't understand the point of this site: it tracks you using cookies and other related technologies.</p>
+</footer>
 {% endblock %}
