--- a/caffeine_tracker/templates/base.html
+++ b/caffeine_tracker/templates/base.html
@@ -71,9 +71,13 @@ if ('querySelector' in document && 'addEventListener' in window  && ("classList"
   (function() {
     var u="https://stats.decadecity.net/";
     _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', 5]);
+    _paq.push(['setSiteId', {% if request.extra.DEBUG %}4{% else %}5{% endif %}]);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+    g.type='text/javascript';
+    g.async=true;
+    g.defer=true;
+    g.src=u+'piwik.js';
+    s.parentNode.insertBefore(g,s);
   })();
 </script>
 <noscript><p><img src="//stats.decadecity.net/piwik.php?idsite=5" style="border:0;" alt="" /></p></noscript>
