--- a/caffeine_tracker/apps/record/templates/record/records.html
+++ b/caffeine_tracker/apps/record/templates/record/records.html
@@ -22,7 +22,15 @@
   </thead>
   <tbody class="zebra">
   {% for record in records %}
-    <tr class="recorded-items__item"><td>{{ record.description }}</td><td>{{ record.time }}</td><td>{{ record.caffeine }}</td><td><a href="{% url 'edit_record' %}?id={{ record.pk }}">Edit</a> <a href="{% url 'delete_record' %}?id={{ record.pk }}">Delete</a></td></tr>
+    <tr class="recorded-items__item">
+      <td>{{ record.description }}</td>
+      <td>{{ record.time }}</td>
+      <td>{{ record.caffeine }}</td>
+      <td>
+        <a class="btn" href="{% url 'edit_record' %}?id={{ record.pk }}">Edit</a>
+        <a class="btn" href="{% url 'delete_record' %}?id={{ record.pk }}">Delete</a>
+      </td>
+    </tr>
   {% endfor %}
   </tbody>
   </table>
