--- a/caffeine_tracker/apps/record/templates/record/records.html
+++ b/caffeine_tracker/apps/record/templates/record/records.html
@@ -16,6 +16,7 @@
 {% if not records %}
   <p>There are no recorded items</p>
 {% else %}
+<div class="table-wrap">
   <table class="recorded-items data-table">
   <thead>
     <tr><th>Description</th><th>Time</th><th>Caffeine (mg)</th><th></th></tr>
@@ -34,5 +35,6 @@
   {% endfor %}
   </tbody>
   </table>
+</div>
 {% endif %}
 {% endblock %}
