--- a/caffeine_tracker/templates/base.html
+++ b/caffeine_tracker/templates/base.html
@@ -57,16 +57,22 @@ if ('querySelector' in document && 'addEventListener' in window  && ("classList"
     {% block body %}{% endblock %}
     </section>
 
-        <nav class="menu">
-          <button data-ct-ui-menu-control class="btn menu__control menu__control--without-menu menu--slide">menu</button>
-          <div class="menu__body menu--slide">
-            <button data-ct-ui-menu-control class="menu__control menu__control menu__control--within-menu">hide menu</button>
-            <ul class="menu__items">
-              <a href="{% url 'add_record' %}"><li class="menu__item">Add</li></a>
-              <a href="{% url 'view_records' %}"><li class="menu__item">View recent</li></a>
-            </ul>
-          </div>
-        </nav>
+    <nav class="menu">
+      <button data-ct-ui-menu-control class="btn menu__control menu__control--without-menu menu--slide">menu</button>
+      <div class="menu__body menu--slide">
+        <button data-ct-ui-menu-control class="menu__control menu__control menu__control--within-menu">hide menu</button>
+        <h2>Items</h2>
+        <ul class="menu__items">
+          <a href="{% url 'add_record' %}"><li class="menu__item">Add</li></a>
+          <a href="{% url 'view_records' %}"><li class="menu__item">View recent</li></a>
+        </ul>
+        <h2>Events</h2>
+        <ul class="menu__items">
+          <a href="{% url 'add_event' %}"><li class="menu__item">Add</li></a>
+          <a href="{% url 'view_events' %}"><li class="menu__item">View recent</li></a>
+        </ul>
+      </div>
+    </nav>
   </div></div>
 <script>
 (function () {
